@@ -8,6 +8,7 @@ unsigned long long find_slide(void);
 kern_return_t restore_exception_ports(void);
 kern_return_t resume(void);
 kern_return_t setup_exception_handling(void);
+kern_return_t deallocate_ports(void);
 kern_return_t suspend(void);
 kern_return_t update_threads(thread_act_port_array_t *);
 kern_return_t get_debug_state(void);
